# standup-siren

./: .gitignore  AGENTS.md  BACKLOG.md  LICENSE  README.md  SPEC.md  package.json  pyproject.toml  requirements.txt  run_standup_siren.py
scripts/: build_bundle.sh  generate_default_ring.sh
site/: index.html  styles.css
site/downloads/: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
standup_siren/: app.py  audio.py  config.py  scheduler.py
