[package]
name = "standup-siren"
version = "0.1.0"
description = "Tiny tray app that plays dramatic music before standup"
authors = ["SleepyClaw"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
